--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,7 +10,28 @@
     font-size: 11px;
 }
 
-li {
-    background-color: rgb(103,140,195);
-    border-color: #e7e7e7;
+.navbar {
+    border-bottom-color: rgb(103,140,195);
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    font-weight: bold;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: rgb(103,140,195);
 }
+
+li {
+    margin: 7px;
+}
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    }
+
+
+
+
+
