--- a/src/app/publications/publications.component.html
+++ b/src/app/publications/publications.component.html
@@ -1,4 +1,5 @@
 <p>
+  <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/71/Princeton_shield.svg/1200px-Princeton_shield.svg.png">
   Link to my thesis:
     https://dataspace.princeton.edu/jspui/handle/88435/dsp016h440s58c
 </p>
