--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,13 +4,13 @@
     <img style='float:left;width:200px;height:200px; margin-right:10px;' src="https://media.licdn.com/dms/image/C5603AQHMgJZxspa05g/profile-displayphoto-shrink_200_200/0?e=1534982400&v=beta&t=b0YXVh_1leMq0wb0oOCJU5rPOm7T7DX2k77bkBebs_w" class="img-thumbnail">
     <div class="row">
         <div class="col-sm-10">  
-        <h1 class="stretch-text stretch-text-only-oneline stretch-text-oneline" style="letter-spacing: 20px;">Lee Herzog, M.D.</h1>
-        <p class="lead stretch-text stretch-text-only-oneline stretch-text-oneline" style="letter-spacing: 9.02118px;">Physician & Full Stack Developer</p>
-        <p class="description">Dr. Herzog is a physician, researcher, and full stack developer passionate about the working at the cutting edge of medicine and technology.
+        <h1 class="stretch-text stretch-text-only-oneline stretch-text-oneline" style="letter-spacing: 15px;">Lee Herzog, M.D.</h1>
+        <p class="lead stretch-text stretch-text-only-oneline stretch-text-oneline" style="letter-spacing: 8px;">Physician & Full Stack Developer</p>
+        <p class="description">Dr. Herzog is a physician, researcher, and full stack developer passionate about working at the cutting edge of medicine and technology.
             Her interests include primary development of medical applications and devices, as well as the integration of these tools into medical practice.
-            Dr. Herzog is a recent graduate of Elevation Academy's Coding Bootcamp and has knowledge in web design and database development.
+            Dr. Herzog has knowledge in web design and database development.
             As a researcher in the fields of Obesity Medicine and Gastroenterology at Mount Sinai Hospital and Massachusetts General Hospital, she has garnered extensive experience in designing, conducting, analyzing, and presenting clinical and translational research. 
-           Since her graduation from medical school has also worked as a medical writer producing clinical evaluation reports necessary for medical device licensure.
+           Since her graduation from medical school she has also worked as a medical writer producing clinical evaluation reports necessary for medical device licensure.
              She graduated summa cum laude from Princeton University in 2013 and received her Medical Degree from Mount Sinai Medical School in New York City in 2018.</p>
       </div>
       <div class="row">
