--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,10 +8,10 @@
         <p class="lead stretch-text stretch-text-only-oneline stretch-text-oneline" style="letter-spacing: 8px;">Physician & Full Stack Developer</p>
         <p class="description">Dr. Herzog is a physician, researcher, and full stack developer passionate about working at the cutting edge of medicine and technology.
             Her interests include primary development of medical applications and devices, as well as the integration of these tools into medical practice.
-            Dr. Herzog has knowledge in web design and database development.
-            As a researcher in the fields of Obesity Medicine and Gastroenterology at Mount Sinai Hospital and Massachusetts General Hospital, she has garnered extensive experience in designing, conducting, analyzing, and presenting clinical and translational research. 
-           Since her graduation from medical school she has also worked as a medical writer producing clinical evaluation reports necessary for medical device licensure.
-             She graduated summa cum laude from Princeton University in 2013 and received her Medical Degree from Mount Sinai Medical School in New York City in 2018.</p>
+            Dr. Herzog currently works as a physician-programmer for a medical diagnostic web and mobile application.
+            She has prior experience as a medical writer producing clinical evaluation reports for the licensing of medical devices.
+            Dr. Herzog has extensive experience in designing, analyzing, and presenting clinical and translational research. She has conducted research in the fields of Obesity Medicine and Gastroenterology at Mount Sinai Hospital of Mount Sinai School of Medicine and Massachusetts General Hospital of Harvard Medical School.
+             She graduated summa cum laude from Princeton University in 2013 and received her Medical Degree from Mount Sinai Medical School in New York City in 2018. </p>
       </div>
       <div class="row">
         <div class="col-sm-10">
