--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -10,7 +10,7 @@
             Her interests include primary development of medical applications and devices, as well as the integration of these tools into medical practice.
             Dr. Herzog currently works as a physician-programmer for a medical diagnostic web and mobile application.
             She has prior experience as a medical writer producing clinical evaluation reports for the licensing of medical devices.
-            Dr. Herzog has extensive experience in designing, analyzing, and presenting clinical and translational research. She has conducted research in the fields of Obesity Medicine and Gastroenterology at Mount Sinai Hospital of Mount Sinai School of Medicine and Massachusetts General Hospital of Harvard Medical School.
+            Dr. Herzog has extensive experience in designing, analyzing, and presenting clinical and translational research. She has conducted research in the fields of Obesity Medicine and Gastroenterology at Mount Sinai Hospital of Mount Sinai Medical School and Massachusetts General Hospital of Harvard Medical School.
              She graduated summa cum laude from Princeton University in 2013 and received her Medical Degree from Mount Sinai Medical School in New York City in 2018. </p>
       </div>
       <div class="row">
